; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_write_tree_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_write_tree_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.strbuf = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"%o %.*s%c\00", align 1
@the_hash_algo = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i32, i8*, i32, i8*)* @write_tree_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_tree_entry(%struct.strbuf* %0, i32 %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.strbuf*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %9, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @strbuf_addf(%struct.strbuf* %11, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %13, i8* %14, i8 signext 0)
  %16 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @the_hash_algo, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @strbuf_add(%struct.strbuf* %16, i8* %17, i32 %20)
  ret void
}

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32, i32, i8*, i8 signext) #1

declare dso_local i32 @strbuf_add(%struct.strbuf*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
